---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
    - Based off of "Beyond Vanila -QoL" modpack.
      - Re-enables technologies and features from "Pavement Drive Assist Continued".
      - Re-enables technologies and features from "Spidertron Patrols".
  Bugfixes: